Bug 154360 - DOCX ToC: Tab stop between chapter number and text converts to a space
Summary: DOCX ToC: Tab stop between chapter number and text converts to a space
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-24 07:51 UTC by Mike Kaganski
Modified: 2023-07-10 14:27 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-03-24 07:51:47 UTC
Open attachment 186130 [details], and  update the table of contents.

The tab stops between the chapter numbers become spaces, and so, the original alignment is lost.
Comment 1 Sophie Sipasseuth 2023-03-24 09:13:39 UTC
Hello Mike Kaganski,

Thank you for reporting the bug. I can confirm that the bug is present.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 676602a1a4e53e88d9f4664579497d534f6ae9c2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: CL threaded
Comment 2 Commit Notification 2023-03-24 16:39:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7eedd76d93ef04d11ae2e1bfb1e7d264aab88f40

tdf#154360: use TOC(N) styles in DOCX as the source of ToC tab stop position

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-04-04 08:56:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/364051901c555d9609ea5f9e9427f3098a2f0bab

tdf#154360: use TOC(N) styles in DOCX as the source of ToC tab stop position

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.